# Anzen

./: .gitmodules  LICENSE  README.md  package-lock.json  package.json
contract/: README.md  foundry.toml  makefile
contract/script/: deploy.s.sol
contract/src/: MarketPlace.sol  NftProfile.sol  VaultFactory.sol  entry.sol  vault.sol
contract/src/dataStructures/: DataStructure.sol
contract/src/interface/: IEntry.sol  IVault.sol
frontend/: .gitignore  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/backend/: web3.ts
frontend/src/components/: CircularGallery.tsx  DetailModal.tsx  ImageTrail.js  LoadingButton.tsx  Marketplace.tsx  MarketplaceCard.tsx  PriceRangeFilter.tsx  aurora.tsx  circular.tsx  connect.tsx  connectDialog.tsx  customButton.tsx  footer.tsx  groupDialog.tsx  navbar.tsx  rollingGallery.tsx  storeFileDialog.tsx  theme-toggle.tsx  upload.tsx  vault.json  vaultDialog.tsx  vaultGroup.tsx
frontend/src/context/: connectkit.tsx
frontend/src/lib/: bee.ts  store.ts  utils.ts
frontend/src/pages/: AIAgentsPage.tsx  AdminDashboard.tsx  AnalyticsPage.tsx  BillingPage.tsx  BlockchainPage.tsx  BlogPage.tsx  CommunityPage.tsx  ContactPage.tsx  (+9 more)
src/: App.tsx
src/components/: theme-provider.tsx
src/pages/: Dashboard.tsx  ExplorePage.tsx  NotificationsPage.tsx
zk/: Cargo.toml  circuit.txt  rust-toolchin.toml  witness.txt
zk/src/: gprove.rs  hash.rs  lib.rs  main.rs  past.rs  request.rs  requestxk.rs
(+25 files in other folders)
